changed some list methods from get(0) to getFirst()